--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -19,6 +19,14 @@
   </div>
 
   <div class="demo-params__item">
+    <label>Show eye</label>
+    <select [(ngModel)]="paramsShowEye">
+      <option>true</option>
+      <option>false</option>
+    </select>
+  </div>
+
+  <div class="demo-params__item">
     <label>Disabled</label>
     <select [(ngModel)]="paramsDisabled">
       <option>true</option>
@@ -35,13 +43,20 @@
     <label>Description text</label>
     <textarea [(ngModel)]="paramsDescription"></textarea>
   </div>
+
+  <div class="demo-params__item">
+    <label>Error text</label>
+    <input [(ngModel)]="paramsError" />
+  </div>
 </div>
 
 <form [formGroup]="form" class="demo-box">
-  <h1>Input variants</h1>
+  <h1>Example</h1>
   <ngmx-input
+    [enableEye]="paramsShowEye === 'true'"
+    [error]="paramsError"
     [type]="paramsType"
-    [required]="true"
+    [required]="paramsRequired === 'true'"
     [label]="paramsLabel"
     [description]="paramsDescription"
     [formControlName]="'testControl'"
@@ -51,6 +66,9 @@
   <pre *ngIf="testControl">
 Test control disabled: {{ testControl.disabled }}
 Test control status: {{ testControl.status }}
+Test control dirty: {{ testControl.dirty }}
+Test control pristine: {{ testControl.pristine }}
+Test control touched: {{ testControl.touched }}
 </pre
   >
 </form>
