--- a/projects/ngxm-input/src/lib/ngxm-input.component.scss
+++ b/projects/ngxm-input/src/lib/ngxm-input.component.scss
@@ -1,20 +1,44 @@
+::ng-deep :root {
+  --ngxm-input-color: #212529;
+  --ngxm-input-color-invalid: red;
+  --ngxm-input-border-color-invalid: red;
+  --ngxm-input-bg-color: #fff;
+  --ngxm-input-border-color: rgba(0, 0, 0, .4);
+  --ngxm-input-border-color-hover: rgba(0, 0, 0, .6);
+  --ngxm-input-border-color-focus: #FFCC00;
+}
+
 .ngxm-input {
+  outline: none !important;
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
+  color: var(--ngxm-input-color);
+  background-color: var(--ngxm-input-bg-color);
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  border: 1px solid var(--ngxm-input-border-color);
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 
-  &--invalid {
-    border-color: red;
-    outline-color: red !important;
+  &--password-control {
+    padding-right: 35px;
+  }
+
+  &:hover {
+    border-color: var(--ngxm-input-border-color-hover);
+  }
+
+  &:focus {
+    border-color: var(--ngxm-input-border-color-focus);
+  }
+
+  &--invalid,
+  &--invalid:focus,
+  &--invalid:hover {
+    border-color: var(--ngxm-input-border-color-invalid) !important;
   }
 
   &__group {
@@ -58,10 +82,13 @@
   &__eye {
     position: absolute;
     right: 10px;
-    top: 50%;
+    bottom: 0;
     z-index: 3;
     cursor: pointer;
-    transform: translateY(-50%);
+    display: flex;
+    height: 38px;
+    justify-content: center;
+    align-items: center;
 
     &-icon {
       display: flex;
