--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -56,12 +56,23 @@
     <label>Error text</label>
     <input [(ngModel)]="paramsError" />
   </div>
+
+  <div class="demo-params__item">
+    <label>Patterns</label>
+    <select [(ngModel)]="paramsPattern">
+      <option>email</option>
+      <option>numeric</option>
+      <option>positiveNumeric</option>
+      <option>percent</option>
+      <option>words</option>
+    </select>
+  </div>
 </div>
 
 <form [formGroup]="form" class="demo-box">
   <h1>Example</h1>
   <ngmx-input
-    [pattern]="PATTERN_EMAIL"
+    [pattern]="patterns[paramsPattern]"
     [enableLoop]="paramsShowLoop === 'true'"
     [enableEye]="paramsShowEye === 'true'"
     [error]="paramsError"
