--- a/projects/demo/src/app/pages/page-main/page-main.component.scss
+++ b/projects/demo/src/app/pages/page-main/page-main.component.scss
@@ -15,7 +15,7 @@ h1 {
 
   &:before {
     position: absolute;
-    background: url('./assets/cocktail.svg');
+    background: url('https://maxouni.github.io/ngxm-libs/assets/cocktail.svg') no-repeat;
     content: '';
     display: block;
     left: -40px;
